[package]
name = "advent_of_code"
version = "0.0.1"
authors = ["Juan Pablo Yamamoto <jpyamamoto@ciencias.unam.mx>"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[features]
test_lib = []

[dependencies]
pico-args = "0.5.0"
rayon = "1.8.0"
