[package]
name = "advent_of_code"
version = "0.0.1"
authors = ["Juan Pablo Yamamoto <jpyamamoto@ciencias.unam.mx>"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[features]
dhat-heap = ["dhat"]
today = ["chrono"]
test_lib = []

[profile.dhat]
inherits = "release"
debug = 1

[dependencies]
# Template dependencies
chrono = { version = "0.4.31", optional = true }
dhat = { version = "0.3.2", optional = true }
pico-args = "0.5.0"
tinyjson = "2.5.1"

# Solution dependencies
rayon = "1.8.0"
