[package]
name = "advent_of_code"
version = "0.0.1"
authors = ["Juan Pablo Yamamoto <jpyamamoto@ciencias.unam.mx>"]
edition = "2021"
default-run = "advent_of_code"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[profile.dhat]
inherits = "release"
debug = 1

[features]
dhat-heap = ["dhat"]
today = ["chrono"]
test_lib = []

[dependencies]

# Template dependencies
chrono = { version = "0.4.31", optional = true }
dhat = { version = "0.3.2", optional = true }
pico-args = "0.5.0"
tinyjson = "2.5.1"

# Solution dependencies
rayon = "1.8.0"
itertools = "0.12.0"
num = "0.4.1"
ndarray = "0.15.6"
ndarray-linalg = { version = "0.16", features = ["openblas-static"] }
rustworkx-core = "0.13.2"
